<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pageAbout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frameProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:src="@mipmap/ic_profile"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TableRow
            android:gravity="center"
            android:layout_marginTop="15dp">
            <TextView
                android:text="@string/txtName"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow
            android:weightSum="2"
            android:layout_marginTop="11dp">
            <ImageView
                android:layout_gravity="right"
                android:src="@drawable/ic_twitter"/>
            <TextView
                android:text="@string/txtSocial"
                android:layout_gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>
        <TableRow
            android:weightSum="2"
            android:layout_marginTop="11dp">
            <ImageView
                android:layout_gravity="right"
                android:src="@drawable/ic_linkedin"/>
            <TextView
                android:text="@string/txtSocial"
                android:layout_gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>
        <TableRow
            android:weightSum="2"
            android:layout_marginTop="11dp">
            <ImageView
                android:layout_gravity="right"
                android:src="@drawable/ic_github"/>
            <TextView
                android:text="@string/txtSocial"
                android:layout_gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>
        <TableRow
            android:weightSum="2"
            android:layout_marginTop="11dp">
            <ImageView
                android:layout_gravity="right"
                android:src="@drawable/ic_codepen"/>
            <TextView
                android:text="@string/txtSocial"
                android:layout_gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>
        <TableRow
            android:weightSum="2"
            android:layout_marginTop="11dp">
            <ImageView
                android:layout_gravity="right"
                android:src="@drawable/ic_earth"/>
            <TextView
                android:text="@string/txtWeb"
                android:layout_gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>
    </TableLayout>

</LinearLayout>